# dev-v3se-public

./: .gitignore  README.md
examples/tier1-basics/01-foundation/: .env.example  README.md  docker-compose.yml  pixi.toml  pyproject.toml
examples/tier1-basics/01-foundation/apptainer/: app.def  dev.def
examples/tier1-basics/01-foundation/configs/: config.toml
examples/tier1-basics/01-foundation/docs/: modification.md  setup.md  structure.md  troubleshooting.md  usage.md
examples/tier1-basics/01-foundation/scripts/: smoke.py
examples/tier1-basics/01-foundation/slurm/: cpu-smoke.sbatch  gpu-smoke.sbatch
examples/tier1-basics/01-foundation/tests/: test_smoke.py
examples/tier1-basics/02-inference-api-token/: .env.example  pixi.toml  pyproject.toml
examples/tier1-basics/02-inference-api-token/configs/: config.toml
examples/tier1-basics/02-inference-api-token/docs/: structure.md  usage.md
examples/tier1-basics/02-inference-api-token/scripts/: info.py
examples/tier1-basics/02-inference-api-token/slurm/: infer-cpu.sbatch
examples/tier1-basics/02-inference-api-token/tests/: test_smoke.py
examples/tier1-basics/03-hf-shared-hub/: .env.example  README.md  docker-compose.yml  pixi.toml  pyproject.toml
examples/tier1-basics/03-hf-shared-hub/docs/: modification.md  setup.md  structure.md  troubleshooting.md  usage.md
examples/tier1-basics/03-hf-shared-hub/scripts/: infer.py  info.py  smoke.py
examples/tier1-basics/03-hf-shared-hub/slurm/: cpu-smoke.sbatch  gpu-t4.sbatch
examples/tier1-basics/03-hf-shared-hub/tests/: test_smoke.py
examples/tier1-basics/06-lmstudio-cluster-server/: .env.example  README.md  pixi.toml  pyproject.toml
examples/tier1-basics/06-lmstudio-cluster-server/apptainer/: app.def  lmstudio.def
examples/tier1-basics/06-lmstudio-cluster-server/docs/: setup.md  structure.md  troubleshooting.md  usage.md
examples/tier1-basics/06-lmstudio-cluster-server/scripts/: info.py  smoke.py
examples/tier1-basics/06-lmstudio-cluster-server/slurm/: infer-cpu.sbatch  lmstudio-server.sbatch
examples/tier1-basics/07-ollama-cluster-server/: .env.example  README.md  pixi.toml  pyproject.toml
examples/tier1-basics/07-ollama-cluster-server/apptainer/: ollama.def
examples/tier1-basics/07-ollama-cluster-server/docs/: modification.md  setup.md  structure.md  troubleshooting.md  usage.md
examples/tier1-basics/07-ollama-cluster-server/scripts/: infer.py  info.py
examples/tier1-basics/07-ollama-cluster-server/slurm/: infer-cpu.sbatch  ollama-server.sbatch
examples/tier1-basics/08-hf-sif-bundle/: .env.example  docker-compose.yml  pixi.toml  pyproject.toml
examples/tier1-basics/08-hf-sif-bundle/apptainer/: app.def  model.def
examples/tier1-basics/08-hf-sif-bundle/configs/: config.toml
examples/tier1-basics/08-hf-sif-bundle/docs/: modification.md  troubleshooting.md  usage.md
examples/tier1-basics/08-hf-sif-bundle/scripts/: infer.py  info.py  smoke.py
examples/tier1-basics/08-hf-sif-bundle/slurm/: cpu-smoke.sbatch  gpu-t4.sbatch
examples/tier1-basics/09-hf-hub-streaming/: .env.example  README.md  pixi.toml  pyproject.toml
examples/tier1-basics/09-hf-hub-streaming/docs/: modification.md  setup.md  structure.md  usage.md
examples/tier1-basics/09-hf-hub-streaming/scripts/: smoke.py
examples/tier1-basics/09-hf-hub-streaming/slurm/: cpu-smoke.sbatch  gpu-t4.sbatch
examples/tier2-combinations/11-multi-provider-inference/: .env.example  pixi.toml  pyproject.toml
examples/tier2-combinations/11-multi-provider-inference/apptainer/: app.def  dev.def
examples/tier2-combinations/11-multi-provider-inference/docs/: modification.md  structure.md  usage.md
examples/tier2-combinations/11-multi-provider-inference/scripts/: info.py  smoke.py
examples/tier2-combinations/12-multi-source-data/: .env.example  .gitignore  pixi.toml  pyproject.toml
examples/tier2-combinations/13-train-infer-pipeline/: .env.example  docker-compose.yml  pixi.toml  pyproject.toml
examples/tier2-combinations/14-git-model-bundle/: .env.example  Dockerfile.bundle  docker-compose.yml  pixi.toml  pyproject.toml
examples/tier3-advanced/21-distributed-finetune/: .env.example  README.md  docker-compose.yml  pixi.toml  pyproject.toml
templates/: .env.example  README.md  pixi.toml  pyproject.toml
templates/_shared/: README.md
templates/_shared/apptainer/: base.def  vllm.def
templates/_shared/docker/: Dockerfile.dev
templates/_shared/env/: .env.template
templates/_shared/scripts/: fetch-hf-model.sh  sync-from-cephyr.sh  sync-to-cephyr.sh  sync-to-mimer.sh
templates/_shared/slurm/: gpu-t4.sbatch  vllm-server.sbatch
templates/apptainer/: app.def
templates/configs/: config.toml
templates/docs/: c3se-primer.md  data-patterns.md  setup.md  structure.md  troubleshooting.md  usage.md
templates/scripts/: info.py  instantiate.ps1  instantiate.sh  smoke.py
v3se-examples/tier1-basics/01-foundation/: .env.example  .gitignore  README.md  pixi.toml  pyproject.toml
v3se-examples/tier1-basics/02-inference-api-token/: .env.example  README.md  pixi.toml  pyproject.toml
v3se-examples/tier1-basics/04-data-cephyr/: .env.example  README.md  pixi.toml  pyproject.toml
v3se-examples/tier1-basics/05-train-lora/: .env.example  pixi.toml  pyproject.toml
v3se-examples/tier1-basics/06-lmstudio-cluster-server/: .env.example  pixi.toml  pyproject.toml
v3se-examples/tier1-basics/07-ollama-cluster-server/: .env.example  docker-compose.yml  pixi.toml  pyproject.toml
v3se-examples/tier1-basics/09-hf-hub-streaming/: .env.example  docker-compose.yml  pixi.toml  pyproject.toml
v3se-examples/tier2-combinations/12-multi-source-data/: .env.example  README.md  docker-compose.yml  pixi.toml  pyproject.toml
v3se-examples/tier2-combinations/14-git-model-bundle/: .env.example  Dockerfile.bundle  README.md  pixi.toml  pyproject.toml
v3se-examples/tier3-advanced/21-distributed-finetune/: .env.example  .gitignore  pixi.toml  pyproject.toml
v3se-examples/tier3-advanced/22-reconstruct-retrain-infer/: .env.example  README.md  pixi.toml  pyproject.toml
(+372 files in other folders)
