[project]
name            = "__PROJECT_SLUG__"
version         = "0.1.0"
description     = "__PROJECT_DESCRIPTION__"
readme          = "README.md"
requires-python = ">=3.12"
license         = { text = "MIT" }
authors = [{ name = "<project> contributors", email = "noreply@example.com" }]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/__PACKAGE_NAME__"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-ra -q"
