[project]
name            = "infer-api"
version         = "0.1.0"
description     = "Template: LLM inference via API token"
readme          = "README.md"
requires-python = ">=3.12"
license         = { text = "MIT" }
authors = [{ name = "template contributors", email = "noreply@example.com" }]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/infer_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-ra -q"
