[project]
name            = "hf-shared-hub"
version         = "0.1.0"
description     = "Template: HuggingFace inference from C3SE's pre-downloaded shared hub (zero quota)"
readme          = "README.md"
requires-python = ">=3.12"
license         = { text = "MIT" }
authors = [{ name = "template contributors", email = "noreply@example.com" }]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hf_shared_hub"]
