[project]
name            = "lmstudio-cluster"
version         = "0.1.0"
description     = "Template: LM Studio server hosted on Alvis via Slurm"
readme          = "README.md"
requires-python = ">=3.12"
license         = { text = "MIT" }
authors = [{ name = "template contributors", email = "noreply@example.com" }]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lmstudio_cluster"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-ra -q"
