[project]
name            = "hf-sif-bundle"
version         = "0.1.0"
description     = "Template: HuggingFace model cloned once and baked into a SIF"
readme          = "README.md"
requires-python = ">=3.12"
license         = { text = "MIT" }
authors = [{ name = "template contributors", email = "noreply@example.com" }]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hf_sif_bundle"]
