[project]
name            = "infer-multi"
version         = "0.1.0"
description     = "Template: multi-provider LLM inference"
readme          = "README.md"
requires-python = ">=3.12"
license         = { text = "MIT" }
authors = [{ name = "template contributors", email = "noreply@example.com" }]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/infer_multi"]
