[project]
name            = "train-infer"
version         = "0.1.0"
description     = "Template: LoRA finetune + bundle + inference pipeline"
readme          = "README.md"
requires-python = ">=3.12"
license         = { text = "MIT" }
authors = [{ name = "template contributors", email = "noreply@example.com" }]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/train_infer"]
