[project]
name            = "git-model-bundle"
version         = "0.1.0"
description     = "Template: Git-cloned model bundled into SIF / Docker image"
readme          = "README.md"
requires-python = ">=3.12"
license         = { text = "MIT" }
authors = [{ name = "template contributors", email = "noreply@example.com" }]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/infer_git_model"]
