[project]
name            = "ollama-cluster"
version         = "0.1.0"
description     = "V3SE template: Ollama server hosted on Alvis via Slurm"
readme          = "README.md"
requires-python = ">=3.12"
license         = { text = "MIT" }
authors = [{ name = "v3se-template contributors", email = "noreply@example.com" }]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ollama_cluster"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-ra -q"
